# python-project-template

./: .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  markdown-link-checker.yml
src/package/: module.py
tests/: test_module.py
